# Open-cell-Foam-Model-Generation-Using-3-D-Voronoi-diagram

./: CMakeLists.txt  CreateDxf.cpp  CreateDxf.h  README.md  main.cpp  util.h
